# website

./: .gitignore  CNAME  README.md  index.html  package.json  pnpm-lock.yaml  postcss.config.js  pyproject.toml  server.py  svelte.config.js  tailwind.config.js  todo.md  tsconfig.json
content/: blog.md  company.md  faq.md  landing-page.md
posts/: in-exercitation.md  ipsum-lorem.md  lorem-ipsum.md
server/: index.js  manifest-full.js  manifest.js
server/chunks/: Button.js  index.js  internal.js
server/entries/pages/: _layout.svelte.js  _page.svelte.js
server/nodes/: 0.js  1.js  10.js  11.js  12.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js  9.js
site/: call-to-action.html  featured-work.html  footer.html  header.html  hero.html  process.html  testimonials.html
src/: app.css  app.html
src/lib/components/: Button.svelte  about-case-study.html  features-alternating-case-study.html  features-alternating-simple.html  features-alternating-with-icons.html  (+6 more)
src/routes/: +layout.svelte  +page.svelte  CallToAction.svelte  FeaturedWork.svelte  Footer.svelte  Header.svelte  Hero.svelte  Partners.svelte  Process.svelte  Testimonials.svelte  WhatWeDo.svelte
styles/: index.css  tailwind.css
templates/: about.html  blog-post.html  blog-preview.html  blog.html  call-to-action.html  chat-bar.html  chat-overlay.html  contact-form.html  contact.html  featured-work.html  footer.html  header.html  hero.html  index.html  input.html  message-received.html  message-sent.html  partners.html  process.html  projects.html  services.html  use-cases.html  what-we-do.html  work.html
(+15 files in other folders)
